# backend/controllers/textures/body.py
@@ -2,8 +2,8 @@ from dao import BodyDao
 from textures.body_texture import generate_body_texture
 from utils.network import get_asset_url, serve_pil_image
 from utils.network.exc import NotFoundException
-from utils.color import DEFAULT_BLUE_TEAM, DEFAULT_ORANGE_TEAM, BLUE_PRIMARY_COLORS, ORANGE_PRIMARY_COLORS, PAINT_COLORS
-from rocket.team import TEAM_ORANGE, TEAM_BLUE
+from utils.color import PAINT_COLORS, get_primary_color
+from rocket.team import TEAM_BLUE
 from textures.custom import handle_custom_body_texture
 
 body_dao = BodyDao()
@@ -29,19 +29,7 @@ def get(body_id: int, primary_color: int = None, primary_color_custom: int = Non
     if body is None:
         raise NotFoundException('Body not found')
 
-    if team == TEAM_ORANGE:
-        if primary_color is None:
-            primary_color_value = DEFAULT_ORANGE_TEAM
-        else:
-            primary_color_value = ORANGE_PRIMARY_COLORS[primary_color]
-    else:
-        if primary_color is None:
-            primary_color_value = DEFAULT_BLUE_TEAM
-        else:
-            primary_color_value = BLUE_PRIMARY_COLORS[primary_color]
-
-    if primary_color_custom is not None:
-        primary_color_value = primary_color_custom
+    primary_color_value = get_primary_color(primary_color, primary_color_custom, team)
 
     body_paint_color = None
 
